--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>org.example</groupId>
     <artifactId>mianshi</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
